# Python-Beginner-projects

Begals/: README.md  main.py
Birthday_Paradox_simulator/: main.py
Birthday_reminder/: pyproject.toml
Birthday_reminder/birthday_reminder/: main.py
Calender/: pyproject.toml
Car_Game/: pyproject.toml
Car_Game/car_game/: main.py
Mp3_to_Mp4_Converter/: pyproject.toml
Mp3_to_Mp4_Converter/mp3_to_mp4_converter/: main.py  source.py
audion_visualization_tools/: pyproject.toml
merging_pdf/: main.py
no_screen_saver_or_screen_closer/: main.py
paint/: main.py
