[tool.poetry]
name = "mp3-to-mp4-converter"
version = "0.1.0"
description = ""
authors = ["Muhammadzulqarnainhaider <zh576198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
